# parprog_7sem

./: .gitignore  README.md
additional_matrix/: README.md  additional_matrix.cpp  boosted_additional_matrix.cpp  main.cpp  matrix.cpp  matrix.h  results.txt  trivial.cpp
additional_nested_omp/: README.md  additional_nested_omp.cpp
additional_opencl_intro/: run.sh
additional_sort/: README.md  additional_sort.cpp  bench.sh  plot.py  plot_old.py  resultss.txt
additional_tasks/additional_opencl_intro/: main.cpp
additional_tasks/additional_sieve_eratosthenes/: bench.sh  eratosthenes.cpp  plot.py  plot2.py  results.txt
additional_tasks/additional_sort/: additional_sort.cpp
additional_tasks/matrix/: CMakeLists.txt  bench.sh  boosted.cpp  plot.py
additional_tasks/nested_omp/: README.md
additional_tasks/opencl_intro/: README.md
additional_tasks/sieve_eratosthenes/: README.md  bench.sh  eratosthenes.cpp  run.sh
additional_untied_tasks/: README.md  additional_untied_tasks.cpp
intro_OPENMP/: 1_hello.cpp  2_summ.cpp  3_sequential_access.cpp  README.md
lab_1/: README.md  compare.sh  example.cpp  res.ods  result_task_1_parallel.txt  run.sh  run_1.sh
lab_1/scripts/: compare.sh  example.sh  task1.sh  task2.sh  task3.sh  vectors.ipynb  vectors.py
lab_1/src/: example.cpp  task_1e.cpp  task_1e_parallel.cpp  task_1e_sequential.cpp  task_2e.cpp  task_3e.cpp
lab_2/: Makefile  README.md  common.hpp  initialize.sh  main.cpp  math.cpp  matr.py  plot.py  run.sh
